src/objects/Leave__c.object
<CustomObject>
    <description>The leave requests for a trader</description>
    <fields>
        <fullName>AWOL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AWOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Business__c</fullName>
        <description>The account business (Opp) that the leave is allocated against</description>
        <inlineHelpText>The account business that the leave is allocated against</inlineHelpText>
        <label>Account Business</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leave</relationshipLabel>
        <relationshipName>Leave</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>In_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Leave that is still charged but does not contribute to annual leave balance</inlineHelpText>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leave_Date__c</fullName>
        <description>The date the leave is for</description>
        <inlineHelpText>The date the leave is for</inlineHelpText>
        <label>Leave Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Over_65_and_36_Degree_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is to be selected if the previous days 6PM news indicates if the next days forecast if 36 degrees or above and if the owner of the business if over 65.</inlineHelpText>
        <label>Over 65 and 36 Degree Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you want to override the rules for when leave can be created (Not available to traders)</inlineHelpText>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>IF ((VALUE( MID( TEXT(  Now()), 12, 2 )) + 10)&gt; 8, 1, 0)</formula>
        <label>test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Leave</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Leave Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_create_after_8</fullName>
        <active>true</active>
        <errorConditionFormula>IF(( TODAY() =  Leave_Date__c) &amp;&amp; VALUE( MID( TEXT(  Now()), 12, 2 )) + 10 &gt; 8 &amp;&amp;  Override__c = false
		, true
		,false)</errorConditionFormula>
        <errorDisplayField>Leave_Date__c</errorDisplayField>
        <errorMessage>Leave must be submitted before 8am on the day of the leave</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Excessive_Heat_Eligibility</fullName>
        <active>true</active>
        <description>Only Account Businesses that have been flagged as eligible for excessive heat policy can have can take leave based on this policy</description>
        <errorConditionFormula>Account_Business__r.Excessive_Heat_Eligable__c = false &amp;&amp; Over_65_and_36_Degree_Day__c = true</errorConditionFormula>
        <errorMessage>Only Account Businesses that have been flagged as eligible for the excessive heat policy can have can take leave based on this policy. If this account business should be eligible then please update the account business with the correct details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Leave_before_today</fullName>
        <active>true</active>
        <errorConditionFormula>IF(TODAY() &gt;  Leave_Date__c &amp;&amp;  Override__c = false
		, true
		,false)</errorConditionFormula>
        <errorDisplayField>Leave_Date__c</errorDisplayField>
        <errorMessage>Leave must be submitted before 8am on the day of the leave</errorMessage>
    </validationRules>
</CustomObject>